cabal-version: 3.0
name:          moonracer
version:       0.1
author:        Tristan Cacqueray
maintainer:    tdecacqu@redhat.com
license:       Apache-2.0
license-file:  CC-BY-SA-4.0
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/TristanCacqueray/moonracer

common common
  build-depends:
    , base   <5
    , gloss

  default-language: GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods -threaded -rtsopts
    -with-rtsopts=-T

executable moonracer
  import:  common
  main-is: MoonRacer.hs

executable moonracer-light
  import:  common
  main-is: MoonRacerLight.hs
